Archive2/5a/a996bbfaf0b4af/output
main.cpp:5:1: error: expected unqualified-id before '{' token
 {
 ^
